--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
   "author": "jayduard",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-useragent": "^1.0.12",
+    "method-override": "^2.3.10",
     "mongoose": "^5.1.4",
     "mongoose-auto-increment": "^5.0.1",
-    "q": "^1.5.1"
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.5",
+    "q": "^1.5.1",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
